css/main.css
/* --------------------- TEXT FONT & COLORS -------------------------------- */
:root {
    --white: #FFFFFF;
    --brown: #844D36;
    --black: #474853;
    --blue: #86B3D1;
    --olive: darkolivegreen;
}
.white{color:var(--white);}
.brown{color:var(--brown);}
.black{color:var(--black);}
.blue{color:var(--blue);}
.olive{color:var(--olive);}

.onImage{color:var(--white);}

.text-title{font-size: 22px; font-weight: bold}


/* --------------------- Main tags ----------------------------------------- */
body{
    margin: 0;
    color: var(--black);
    background-image: url("../img/bg.png");
}
main{
    max-width: 1080px;
    margin: 0 auto  0 auto !important;
    float: none !important;
}
html{
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}
button:focus, a:focus{
    outline: none;
}
button{
    background-color: var(--white);
    padding: 10px 30px;
    border: none;
    text-align: center;
    font-weight: bold;
    transition: all .1s ease-in-out;
}
button:hover{
    -ms-transform: scale(1.1); /* IE 9 */
    -webkit-transform: scale(1.1); /* Safari */
    transform: scale(1.1);
}
/* row and col system inspired by w3.css */
.row{
    display: table;
    clear: both;
}
.col{
    float: left;
    width: 100%;
}
@media (min-width:600px){
    .col.c1{width:8.33333%}
    .col.c2{width:16.66666%}
    .col.c3{width:24.99999%}
    .col.c4{width:33.33333%}
    .col.c5{width:41.66666%}
    .col.c6{width:49.99999%}
    .col.c7{width:58.33333%}
    .col.c8{width:66.66666%}
    .col.c9{width:74.99999%}
    .col.c10{width:83.33333%}
    .col.c11{width:91.66666%}
    .col.c12{width:99.99999%}
}
.centered{text-align: center;}
.relative{position: relative;}
.fixed{position: fixed;}
.absolute{position: absolute;}
.z5{z-index: 5;}
.z4{z-index: 4;}
.z3{z-index: 3;}
.z2{z-index: 2;}
.z1{z-index: 1;}
.padding-10{padding: 10px 10px;}
.padding-20{padding: 20px 20px;}
.padding-30{padding: 30px 30px;}

.box-shadow{
    -webkit-box-shadow: 8px 8px 19px -1px rgba(94,94,94,1);
    -moz-box-shadow: 8px 8px 19px -1px rgba(94,94,94,1);
    box-shadow: 8px 8px 19px -1px rgba(94,94,94,1);
}

/* --------------------- NAVIGATION BAR ------------------------------------ */
nav{
    max-width: 1180px;
    margin: 0 auto  0 auto !important;
    float: none !important;
    background-color: var(--white);
    width: 100%;
    position: sticky;
    position: -webkit-sticky;
    top: 0;
    overflow: hidden;
    z-index: 5;
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12); /*shadow inspired by w3schools.com*/
}
nav img{
    height: 40px;
    padding-left: 5px;
    padding-top: 5px;
    padding-bottom: 3px;
}
.navbar-items{
    float: right;
    padding-right: 20px;
    padding-top: 15px;
    padding-bottom: 15px;
    vertical-align: middle
}
.navbar-item{
    display: inline;
    padding-right: 10px;
    padding-left: 15px;
    padding-bottom: 15px;
    padding-top: 15px;
    text-decoration: none;
    color: var(--olive);
    line-height: 20px;
}
.navbar-item:hover{
    color: var(--black);

    /*text-shadow: 1px 0px 1px var(--black);*/
}
.navbar-item.active{
    font-weight: bold;
    /*text-shadow: 1px 0px 0px var(--black);*/
}
.navbar-toggle{
    float: right;
    display: none;
    background-color: transparent; 
    border: none;
    color: var(--olive);
    text-align: center;
    text-decoration: none;
    padding-bottom:"1px";
    padding-left: "6px";
    font-size: 16px;
    line-height: 20px
}
.navbar-toggle:hover{
    font-size: 110%;
}
@media only screen and (max-width:600px){
    .navbar-item{display: none;}
    .navbar-toggle{display: block;}
    .navbar-item.toggled{display: block;}
    .navbar-toggle.toggled{padding-bottom: 15px; padding-left: 15px;}
    /*main.toggled{margin-top: 0px;}*/
}
nav hr{
    height: 3px;
    border: none;
    margin: 3px 0 0 0;
    background: var(--brown);
    transition: 0.3s ease-in-out;
}
nav .item1.active ~ hr{margin-left:2%; width:17%;}
nav .item2.active ~ hr{margin-left:23%; width:19%;}
nav .item3.active ~ hr{margin-left:48%; width:14.5%;}
nav .item4.active ~ hr{margin-left:67%; width:17%;}
nav .item5.active ~ hr{margin-left:90%; width:9%;}
nav .item1:hover ~ hr{margin-left:2%; width:17%;}
nav .item2:hover ~ hr{margin-left:23%; width:19%;}
nav .item3:hover ~ hr{margin-left:47%; width:14.5%;}
nav .item4:hover ~ hr{margin-left:67%; width:17%;}
nav .item5:hover ~ hr{margin-left:90%; width:9%;}



/* --------------------- Footer -------------------------------------------- */
footer{
    width:100%;
    background-color: var(--white);
    height:inherit;
    box-shadow: 0 0px 10px 0 rgba(0,0,0,0.12), 0 0px 15px 0 rgba(0,0,0,0.12);
    line-height: 25px;
}
footer .col{
    padding-bottom: 20px;
    padding-top: 20px;
}
footer a{
    color:var(--black);
    text-decoration: none;
}
footer a:hover:not(.icon){
    font-size: 110%;
}
footer .icon{
    font-size: 25px;
    padding: 8px;
}
footer .icon:hover{
    color:var(--brown);
}
footer form{
    padding:10px;
}
input[type=text]{
    padding: 10px 10px;
    margin-bottom: 10px;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    width: 90%;
}
input[type=submit]{
    background-color: var(--brown);
    color: var(--white);
    padding: 10px 20px;
    border: 1px solid var(--brown);
    border-radius: 4px;
    cursor: pointer;
}
input[type=submit]:hover{
    border: 1px solid var(--brown);
    background-color: var(--white);
    color: var(--brown);
}


/* --------------------- HOME PAGE ----------------------------------------- */
.image_button{

    transition: all .1s ease-in-out;
}
.image_button:hover{
    -ms-transform: scale(1.08); /* IE 9 */
    -webkit-transform: scale(1.08); /* Safari */
    transform: scale(1.08);
}

